--- a/src/components/UI/input/input.module.scss
+++ b/src/components/UI/input/input.module.scss
@@ -31,6 +31,12 @@
     border: 2px solid #26C2AE;
     border-radius: 5px;
   }
+
+  &_error {
+    &:focus {
+      border: 2px solid #E17457;
+    }
+  }
 }
 
 .label {
@@ -82,4 +88,15 @@
   line-height: 36px;
   text-align: right;
   color: #547878;
+}
+
+.validationError {
+  position: absolute;
+  bottom: -25px;
+  right: 0;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #E17457;
+  white-space: nowrap;
 }
