--- a/src/components/main/main.module.scss
+++ b/src/components/main/main.module.scss
@@ -1,7 +1,14 @@
+@import '../scss/mixins';
+
 .main {
   background: #FFFFFF;
   box-shadow: 0px 32px 43px rgba(79, 166, 175, 0.200735);
   border-radius: 25px;
   display: flex;
   justify-content: space-between;
+
+  @include mobile {
+    flex-direction: column;
+    border-radius: 25px 25px 0 0;
+  }
 }
